# cLLM

./: .ai_workflow.md  .cursorrules  .gitignore  CMakeLists.txt  CODEBUDDY_SETUP_SUMMARY.md  DOCS_REORGANIZATION_COMPLETED.md  DOCS_REORGANIZATION_READY.md  GARBLED_TEXT_FIX_SUMMARY.md  GGUF_LOADER_REVIEW_REPORT.md  GITHUB_推送指南.md  GITIGNORE_说明.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LLAMACPP_BACKEND_CODE_REVIEW.md  Makefile  Makefile_USAGE.md  OFFSET_CALCULATION_ANALYSIS.md  P4_未完成任务列表.md  README.md  README_SERVER.md  REBUILD_COMMANDS.md  TOKENIZER_INTEGRATION_SUMMARY.md  VOCAB_SIZE_MISMATCH_ANALYSIS.md  ZERO_LOGITS_ANALYSIS.md  analyze_memory.py  concurrent_benchmark.py  config.json  config.yaml  config_cpu.yaml  config_gpu.yaml  config_kylin_fp16.yaml  config_kylin_fp32.yaml  config_kylin_gpu_test.yaml  config_kylin_hf_gpu.yaml  cpu_gpu_comparison_report.md  debug_server.sh  fix_llama_cpp_paths.sh  hardcoded_values.md  history_202601151930.md  layer_comparison_data.json  (+5 more)
.codebuddy/: .gitignore  QUICK_REFERENCE.md  README.md  SETUP_COMPLETE.md  USAGE_GUIDE.md  project.yaml
.comate/: memory.json
backup/: CMakeLists.txt  basic_usage.cpp  http_server_example.cpp
backup/CTokenizer/include_cllm_CTokenizer/: llama_tokenizer.h  model_detector.h  qwen_tokenizer.h  sentencepiece_tokenizer.h  tokenizer.h
backup/CTokenizer/src_CTokenizer/: CMakeLists.txt  deepseek_tokenizer.cpp  manager.cpp  model_detector.cpp  qwen_tokenizer.cpp  sentencepiece_tokenizer.cpp
config/: cache_config.yaml  config.yaml  config.yaml.template  config_backup.yaml  config_cpu.yaml  config_cpu.yaml.bak_20260203_1125  config_cpu_only.yaml  config_gpu.yaml  config_gpu_10.yaml  config_gpu_20.yaml  config_gpu_30.yaml  config_kylin_cpu.yaml  config_kylin_gpu.yaml  config_llama_cpp.yaml  config_llama_cpp_cpu.yaml  config_llama_cpp_gpu.yaml  config_llama_gpu.yaml  model_config.yaml  production.yaml  sampler_config.yaml  scheduler_config.yaml  server_config.yaml  test_config.yaml  test_config_full.yaml  test_config_minimal.yaml  test_integration.yaml  test_qwen3.yaml
data/: test_prompts_500.txt
docs/: 00_文档导航.md  CURSOR_SKILLS_GUIDE.md  cpu_backend_optimization_plan.md  memory_analysis_report.md  文件命名统一完成报告.md  文件重命名计划.md  文档重组快速参考.md  文档重组总结.md  文档重组检查清单.md  文档重组索引.md  文档重组计划.md
examples/: CMakeLists.txt  batch_processing_example.cpp  ctokenizer_example.cpp.backup  hf_tokenizer_example.cpp  http_server_example.cpp  integrated_test.cpp  libtorch_api_test.cpp  libtorch_inference_example.cpp  libtorch_qwen_test.cpp  libtorch_text_generation.cpp  load_qwen_model.cpp  minimal_inference_test.cpp  minimal_inference_test_json.cpp  performance_test.cpp  test_dequantize.cpp  test_gguf_loader.cpp
model/: GGUF_CONVERSION_README.md  README.md  convert_qwen_to_gguf.py  download.py  download_and_test.py  export_qwen_bin.py  export_qwen_torchscript.py  quick_test.py  simple_test.py  test_model.py  test_qwen3.py
results/: cllm_test_results_20260119_183220.json  cllm_test_results_20260119_191723.json  cllm_test_results_20260119_194439.json  cllm_test_results_20260119_200044.json  generate_benchmark_20260203_120414.csv  generate_benchmark_20260203_120434.csv  ollama_test_results_20260119_192303.json  ollama_test_results_20260119_194934.json  ollama_test_results_20260119_200554.json  tokenizer_long_tokens_18080_20260203_115458.json  tokenizer_long_tokens_18080_20260203_115703.json  tokenizer_long_tokens_20260203_112925.json  tokenizer_long_tokens_20260203_113247.json  tokenizer_long_tokens_20260203_113401.json
scripts/: benchmark.sh  cleanup_debug.py  deploy_centos7.sh  (+25 more)
tests/: CMakeLists.txt  README.md  README_KYLIN_GGUF_TEST.md  TEST_GUIDE.md  VERIFICATION_REPORT.md  run_kylin_gguf_test.sh  test_api_integration.cpp  test_backend_qwen3_integration.cpp  test_batch_manager.cpp  test_config.yaml  test_ctokenizer.cpp  test_ctokenizer.cpp.backup  test_deepseek_preprocessing_unit.cpp  test_drogon_server.cpp  test_e2e_scenarios.cpp  test_e2e_subsystem.cpp  test_endpoints.cpp  test_env.sh  test_executor_backend_integration.cpp  test_frontend_subsystem.cpp  test_full_system.cpp  test_generate.cpp  test_generate_another.py  test_generate_api.py  test_generate_endpoint.cpp  test_generate_endpoint.py  test_generate_endpoint_direct.cpp  test_generate_integration.cpp  test_generate_simple.cpp  test_generate_simple.py  test_ggml_transformer.cpp  test_gguf_curl.sh  test_gguf_e2e.sh  test_gguf_format.py  test_gguf_generate_integration.cpp  test_gguf_loader.cpp  test_gguf_loader_complete.cpp  test_gguf_loading.cmake  test_gguf_loading.cpp  test_hf_tokenizer.cpp  (+63 more)
tests/data/: inference_test_data.json  performance_test_data.json  scenarios_test_data.json  stress_test_data.json  test_cases.json  tokenizer_test_data.json
tests/kylin_test_suite/: CPU_GPU_COMPARISON_REPORT.md  FINAL_TEST_REPORT.md  QUICK_START.md  README.md  README_PHASED_TEST.md  TEST_REPORT.md  kylin_test_framework.h  kylin_test_main.cpp  run_phased_tests.sh  test_attention_breakdown.cpp  test_common_types.h  test_cpu_gpu_comparison.cpp  test_end_to_end_generation.cpp  test_ggml_precision.cpp  test_gguf_kylin_load.cpp  test_gpu_quality.cpp  test_http_api_integration.cpp  test_inference_pipeline.cpp  test_kylin_backend.cpp  test_kylin_detailed_benchmark.cpp  test_kylin_ggml_inference.cpp  test_kylin_gguf_q4k.cpp  test_layer_by_layer.cpp  test_layer_by_layer_debug.cpp  test_model_loading.cpp  test_model_output_analysis.cpp  test_output_quality.cpp  test_output_validation.cpp  test_performance_benchmark.cpp  test_phased_cpu_gpu_comparison.cpp  test_real_model_comparison.cpp  test_sampling_strategies.cpp  test_softmax_comparison.cpp  test_text_generation_comparison.cpp  test_tokenizer_integration.cpp  测试完成总结.txt
tests/llama_cpp_test_suite/: test_sequence_id_manager_simple.cpp
tests/test/: sampler_test  sampler_test.cpp  test_client.py
tests/unit/: minimal_test.cpp
tests/unit/cache/: kv_cache_manager_test.cpp
tests/unit/common/: timeout_detection_test.cpp
tests/utils/: http_test_helpers.h  mock_tokenizer.h  performance_test_helpers.h  test_base.h  test_data_helpers.h
(+694 files in other folders)
